# miniature-tribble

./: .gitignore  CMakeLists.txt  README.md  build_output.txt  build_verbose.txt
.cache/clangd/index/: main.c.7C2E24BA9B03494C.idx
app/: dm_binder.c  dm_binder.h
app/ui/: lv_conf.h  ui_pages.c  ui_pages.h
boards/esp32/: CMakeLists.txt  hal_esp32.c
boards/rp2040/: CMakeLists.txt  hal_rp2040.c
boards/sim/: CMakeLists.txt  hal_sim.c
boards/stm32/: CMakeLists.txt  hal_stm32.c
core/: crc16.c  crc16.h  dm_config.h  dm_core.c  dm_core.h  dm_packet.c  dm_packet.h  dm_parser.c  dm_parser.h  dm_platform.h  dm_protocol.c  dm_protocol.h
docs/: protocol_spec.md
src/: main.c
tools/: host_tester.py  res_calc.html  res_calc.py
